update blog mono theme

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2933,7 +2933,7 @@
           },
           "symbol": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.medium}",
               "type": "fontWeights"
             },
             "strong": {
