--- a/tokens/config.json
+++ b/tokens/config.json
@@ -40,7 +40,7 @@
         "type": "fontWeights"
       },
       "text": {
-        "value": "Text",
+        "value": "Book",
         "type": "fontWeights"
       },
       "medium": {
