fix: application > config > fontWeight > type

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2350,31 +2350,31 @@
       "fontWeight": {
         "light": {
           "value": "Light",
-          "type": "fontWeights"
+          "type": "other"
         },
         "regular": {
           "value": "Regular",
-          "type": "fontWeights"
+          "type": "other"
         },
         "book": {
           "value": "Book",
-          "type": "fontWeights"
+          "type": "other"
         },
         "medium": {
           "value": "Medium",
-          "type": "fontWeights"
+          "type": "other"
         },
         "semibold": {
           "value": "Semibold",
-          "type": "fontWeights"
+          "type": "other"
         },
         "bold": {
           "value": "Bold",
-          "type": "fontWeights"
+          "type": "other"
         },
         "black": {
           "value": "Black",
-          "type": "fontWeights"
+          "type": "other"
         }
       },
       "color": {
