fix: app > font-size > surface > foonote > symbol

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1275,7 +1275,7 @@
             "type": "fontSizes"
           },
           "symbol": {
-            "value": "{config.fontSize.footnote.text} - 0.125rem",
+            "value": "{app.fontSize.surface.footnote.text} - 0.125rem",
             "type": "fontSizes"
           }
         },
