--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1399,40 +1399,6 @@
           "value": "none",
           "type": "textCase"
         }
-      },
-      "surface": {
-        "display": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "title": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "subtitle": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "callout": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "body": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "caption": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "footnote": {
-          "value": "none",
-          "type": "textCase"
-        },
-        "code": {
-          "value": "none",
-          "type": "textCase"
-        }
       }
     },
     "letterSpacing": {
@@ -1991,15 +1957,11 @@
           }
         },
         "callout": {
-          "sm": {
-            "value": "140%",
+          "default": {
+            "value": "160%",
             "type": "lineHeights"
           },
-          "md": {
-            "value": "140%",
-            "type": "lineHeights"
-          },
-          "lg": {
+          "short": {
             "value": "140%",
             "type": "lineHeights"
           }
