fix: application > textCase > surface

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1215,6 +1215,40 @@
           "value": "none",
           "type": "textCase"
         }
+      },
+      "surface": {
+        "display": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "title": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "subtitle": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "callout": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "body": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "caption": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "footnote": {
+          "value": "none",
+          "type": "textCase"
+        },
+        "code": {
+          "value": "none",
+          "type": "textCase"
+        }
       }
     },
     "letterSpacing": {
