--- a/tokens/application.json
+++ b/tokens/application.json
@@ -107,27 +107,7 @@
           }
         },
         "border": {
-          "xxs": {
-            "value": "2px",
-            "type": "dimension"
-          },
-          "xs": {
-            "value": "2px",
-            "type": "dimension"
-          },
-          "sm": {
-            "value": "2px",
-            "type": "dimension"
-          },
-          "md": {
-            "value": "2px",
-            "type": "dimension"
-          },
-          "lg": {
-            "value": "2px",
-            "type": "dimension"
-          },
-          "xl": {
+          "default": {
             "value": "2px",
             "type": "dimension"
           }
@@ -249,23 +229,7 @@
           }
         },
         "border": {
-          "xs": {
-            "value": "1px",
-            "type": "dimension"
-          },
-          "sm": {
-            "value": "1px",
-            "type": "dimension"
-          },
-          "md": {
-            "value": "1px",
-            "type": "dimension"
-          },
-          "lg": {
-            "value": "1px",
-            "type": "dimension"
-          },
-          "xl": {
+          "default": {
             "value": "1px",
             "type": "dimension"
           }
