fix: application > dimensions > surface > padding

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -144,6 +144,14 @@
         }
       },
       "surface": {
+        "padding": {
+          "container": {
+            "default": {
+              "value": "{app.dimension.control.padding.xs}",
+              "type": "dimension"
+            }
+          }
+        },
         "radius": {
           "sm": {
             "default": {
