refactor: app > color > component > fg
add a token that wont change in dark mode

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -852,6 +852,10 @@
             "value": "hsla({app.config.color.neutral.hue.default}, {app.config.color.neutral.saturation.default}, 0%, 0)",
             "type": "color"
           }
+        },
+        "fg": {
+          "value": "hsl({app.config.color.primary.hue.default}, {app.config.color.primary.saturation.default}, 96%)",
+          "type": "color"
         }
       }
     },
