reconfig border in app and all components

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -110,6 +110,10 @@
           "default": {
             "value": "2px",
             "type": "dimension"
+          },
+          "thin": {
+            "value": "1px",
+            "type": "dimension"
           }
         }
       },
@@ -138,6 +142,10 @@
         },
         "border": {
           "default": {
+            "value": "1px",
+            "type": "dimension"
+          },
+          "thin": {
             "value": "1px",
             "type": "dimension"
           }
