--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1336,7 +1336,7 @@
         },
         "title": {
           "default": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           },
           "strong": {
